<resources>
    <string name="app_name">Farma</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria</string>
    <string name="quantidade">Quantidade</string>
    <string name="datavalidade">Data de Validade</string>
    <string name="produto">Produto</string>
    <string name="filtrar_por">Filtrar por</string>
    <string name="valor_do_filtro">Valor do filtro</string>
    <string name="limpar_filtros">Limpar filtros</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtrar">Filtrar</string>
    <string name="gravar">Gravar</string>
    <string name="selecionarIdioma">Selecionar Idioma</string>

    <string name="medicamento">Medicamento</string>
    <string name="perfume">Perfume</string>
    <string name="cosmetico">Cosmético</string>

    <string name="erro_inesperado">Um erro inesperado ocorreu, contate a empresa desenvolvedor</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="portugues">Português</string>
    <string name="ingles">Inglês</string>
    <string name="espanhol">Espanhol</string>
    <string name="alemao">Alemão</string>
    <string name="alterarIdioma">Alterar idioma</string>

    <string-array name="array_categoria">
        <item>@string/medicamento</item>
        <item>@string/perfume</item>
        <item>@string/cosmetico</item>
    </string-array>

    <string-array name="array_filtro">
        <item>@string/nome</item>
        <item>@string/descricao</item>
        <item>@string/categoria</item>
        <item>@string/quantidade</item>
        <item>@string/datavalidade</item>
    </string-array>

</resources>
